<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <FrameLayout
      android:background="@color/white"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_margin="10dp"
      android:id="@+id/parent"
      android:layout_width="match_parent"
      android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/rounded_top_left_right_corners"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_location"
        android:id="@+id/place"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/horizontal_guideline"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05"
        />

    <TextView
        android:layout_marginTop="5dp"
        android:padding="3dp"
        android:id="@+id/date"
        android:textColor="@color/green_A400"
        android:textSize="14sp"
        android:gravity="center"
        android:text="@string/dummy_date"
        android:background="@drawable/rounded_corner_with_border_color"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="@+id/horizontal_guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />

    <TextView
        android:id="@+id/detailed_text"
        app:layout_constraintWidth_percent=".95"
        android:layout_width="0dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="@+id/horizontal_guideline"
        app:layout_constraintTop_toBottomOf="@+id/date"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:maxLines="2"
        android:textSize="14sp"
        android:text="@string/price_per_person"
        app:layout_constraintHorizontal_weight=".2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/book_now"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/book_now"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/green"
        android:maxLines="2"
        android:text="@string/book_now"
        android:textAllCaps="true"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/price"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>
  </FrameLayout>
</layout>